# corrfeatred

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
corrfeatred/: reduce.py
multicolinearity/: __init__.py  reduce.py
tests/: test_correlation.py  test_hello.py
